--- a/css/reset.css
+++ b/css/reset.css
@@ -22,6 +22,6 @@ input { vertical-align:middle; }
 hr{display:none;}
 /*구분선 목적이라 숨김*/
 
- .skip { font-size:0; width:0; height:0; 
+#skip, .skip { font-size:0; width:0; height:0; 
 line-height:0; position:absolute; left:-9999px; }
 .cf:after {content:"";display:block;clear:both;}
